--- a/labs/Lab 1 - Python and NumPy.ipynb
+++ b/labs/Lab 1 - Python and NumPy.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Name(s)\n",
-    "**PUT YOUR FULL NAME(S) HERE**"
+    "Quinn Coleman"
    ]
   },
   {
@@ -23,13 +23,8 @@
     "\n",
     "While other IDEs exist for Python development and for data science related activities, one of the most popular environments is Jupyter Notebooks.\n",
     "\n",
-    "This lab is not intended to teach you everything you will use in this course. Instead, it is designed to give you exposure to some critical components from NumPy that we will rely upon routinely."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "This lab is not intended to teach you everything you will use in this course. Instead, it is designed to give you exposure to some critical components from NumPy that we will rely upon routinely.\n",
+    "\n",
     "## Exercise 0\n",
     "Please read and reference the following as your progress through this course. \n",
     "\n",
@@ -44,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**YOUR ANSWER HERE**"
+    "**YOUR ANSWER HERE** - later"
    ]
   },
   {
@@ -64,21 +59,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "this is my answer 2001\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[2, 2, 2, 2],\n",
+       "       [2, 2, 2, 2],\n",
+       "       [2, 2, 2, 2],\n",
+       "       [2, 2, 2, 2],\n",
+       "       [2, 2, 2, 2],\n",
+       "       [2, 2, 2, 2]])"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# YOUR SOLUTION HERE\n",
-    "#a=1000\n",
-    "print('this is my answer',a+1) "
+    "import numpy as np\n",
+    "\n",
+    "a = np.full((6, 4), 2)\n",
+    "a"
    ]
   },
   {
@@ -92,10 +96,27 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 1, 1, 1],\n",
+       "       [1, 3, 1, 1],\n",
+       "       [1, 1, 3, 1],\n",
+       "       [1, 1, 1, 3],\n",
+       "       [1, 1, 1, 1],\n",
+       "       [1, 1, 1, 1]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# YOUR SOLUTION HERE\n",
-    "a=2000"
+    "b = np.ones((6, 4), dtype=int)\n",
+    "np.fill_diagonal(b, 3)\n",
+    "b"
    ]
   },
   {
@@ -107,11 +128,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6, 2, 2, 2],\n",
+       "       [2, 6, 2, 2],\n",
+       "       [2, 2, 6, 2],\n",
+       "       [2, 2, 2, 6],\n",
+       "       [2, 2, 2, 2],\n",
+       "       [2, 2, 2, 2]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# YOUR SOLUTION HERE"
+    "a * b\n",
+    "# np.dot(a,b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- dot(a,b) doesn't work because that is a dot product that requires matrices a and b to have aligned dimensions.\n",
+    "- a * b works because that is an element-wise multiplication and matrices a and b have the same dimensions."
    ]
   },
   {
@@ -123,11 +169,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[16, 16, 16, 16],\n",
+       "       [16, 16, 16, 16],\n",
+       "       [16, 16, 16, 16],\n",
+       "       [16, 16, 16, 16]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[12, 12, 12, 12,  8,  8],\n",
+       "       [12, 12, 12, 12,  8,  8],\n",
+       "       [12, 12, 12, 12,  8,  8],\n",
+       "       [12, 12, 12, 12,  8,  8],\n",
+       "       [12, 12, 12, 12,  8,  8],\n",
+       "       [12, 12, 12, 12,  8,  8]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# YOUR SOLUTION HERE"
+    "a\n",
+    "a.transpose()\n",
+    "b\n",
+    "b.transpose()\n",
+    "display(np.dot(a.transpose(), b))\n",
+    "np.dot(a, b.transpose())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The shapes are different because they are results of different dot products."
    ]
   },
   {
@@ -139,11 +225,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a pretty cool function\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR SOLUTION HERE"
+    "def cool_func():\n",
+    "    print('This is a pretty cool function')\n",
+    "    \n",
+    "cool_func()"
    ]
   },
   {
@@ -155,11 +252,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of a: 5.191629387741034\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR SOLUTION HERE"
+    "def do_matrix_stuff():\n",
+    "    a = np.random.rand(3,4)\n",
+    "    b = np.random.rand(2,5)\n",
+    "    print('Sum of a:', a.sum())\n",
+    "    \n",
+    "do_matrix_stuff()"
    ]
   },
   {
@@ -174,9 +284,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# YOUR SOLUTION HERE"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -343,13 +451,7 @@
  ],
  "metadata": {
   "jupytext": {
-   "formats": "ipynb,md",
-   "text_representation": {
-    "extension": ".md",
-    "format_name": "markdown",
-    "format_version": "1.1",
-    "jupytext_version": "1.2.4"
-   }
+   "formats": "ipynb,md"
   },
   "kernelspec": {
    "display_name": "Python 3",
